fix weak specificity for disappearing home button on narrow screens

--- a/src/components/menu/style.module.css
+++ b/src/components/menu/style.module.css
@@ -11,7 +11,7 @@
 }
 
 @media (max-width: 990px) {
-  .home-text-button {
+  .main .home-text-button {
     display: none;
   }
 }
